src/App.css
.jira {
  font-family: 'Poppins', sans-serif;
  /* height:100%; */
 
}


/*back ground của tiêu đề tab Board */

.BACKLOG {
  background-color: #FA264B;
}
.SELECTED {
  background-color: #A2987A;
}
.IN {
  background-color: #AE8EBB;
}
.DONE {
  background-color: #B7BCCC;
}
/* /* .btnTrigger:focus{
  outline: 0 !important
} */
/* .btnTrigger{
  background-color:transparent !important;
} */ 

.jiraLogo{
  color: #fff;
    font-size: 1rem;
    font-weight: 700;
    padding: 20px;
    text-transform: uppercase;
    width: 100%;
    align-items: center;
    display: flex;
    justify-content: center;
    background-color:#001529;
    cursor:pointer;
   font-family:  'Poppins', sans-serif;
}



.btnBlue {
  color: #fff !important;
  background-color:#252935 !important;
}
.btnBlue:hover{
  background-color:#3d4458!important;
}
.btnRed{
  background-color:#FA264B !important;
  color: #fff !important;
}
.btnRed:hover{
  background-color:#f74f6b !important;
}
.btnEdit {
  background-color: #ddd !important;
  color:#5f5f5f!important
}
.btnEdit:hover{
  background-color:#252935 !important;
  color:white !important;
}
.btnCancel{
  background-color: #ddd !important;
  color:#5f5f5f!important
}
.btnCancel:hover{
  color: #ddd !important;
  background-color:#5f5f5f!important
}
.btnRemove{
  background-color: #ddd !important;
  color:#5f5f5f!important
}
.btnRemove:hover{
  background-color:#FA264B !important;
  color:white !important;
}
.iconRed{
  
  color:#FA264B !important;
}
.iconSmoke{
color: #AE8EBB;
}
.iconBrown{
  color: #A2987A
}
.iconPurple{
 color: #AE8EBB;
}

button:focus {
  outline: 0 !important
    
}
:where(.css-dev-only-do-not-override-vzou9h).ant-switch.ant-switch-checked {
  background: #252935 !important;
}
.switch {

  background-color: rgba(0, 0, 0, 0.45) !important;

}
:where(.css-vzou9h).ant-switch.ant-switch-checked {
  background: #252935 !important;
}
/* .btnTrigger:focus{
  outline: 0 !important
}*/
:where(.css-dev-only-do-not-override-1adbn6x).ant-pagination .ant-pagination-item-active {
 
  border-color: #252935 !important;
}
:where(.css-dev-only-do-not-override-1adbn6x).ant-pagination .ant-pagination-item-active:hover {
  border-color: #252935 !important;
}
:where(.css-1adbn6x).ant-pagination .ant-pagination-item-active {

  border-color: #252935 !important;
}
:where(.css-dev-only-do-not-override-11tgje).ant-menu-dark .ant-menu-item-selected, :where(.css-dev-only-do-not-override-11tgje).ant-menu-dark>.ant-menu .ant-menu-item-selected {
  background-color: #B7BCCC!important;
}
.css-dev-only-do-not-override-j2rubj.ant-switch.ant-switch-checked {
  background: #252935  !important;
}
.css-j2rubj.ant-switch.ant-switch-checked {
  background: #252935!important;
}
.High{
  color: #FA264B;
    background: #fff2f0;
    border-color: #ffccc7;
    border: 1px solid #FA264B;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 10px;
    line-height: 16px;
    list-style: none;
    font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
    display: inline-block;
    height: auto;
    margin-inline-end: 8px;
    padding-inline: 7px;
    white-space: nowrap;
    border-radius: 4px;
    opacity: 1;
    transition: all .2s;
    text-align: start;
    position: relative;
}
.Medium{
  color: #A2987A;
    background: #fffbe6;
    border-color: #d5caa6;
    border: 1px solid #A2987A;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 10px;
    line-height: 16px;
    list-style: none;
    font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
    display: inline-block;
    height: auto;
    margin-inline-end: 8px;
    padding-inline: 7px;
    white-space: nowrap;
    border-radius: 4px;
    opacity: 1;
    transition: all .2s;
    text-align: start;
    position: relative;
}
.Low{
  color: #AE8EBB;
  background: #e9edf0;
  border-color: #b6a7bc;
  border: 1px solid #AE8EBB;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-size: 10px;
  line-height: 16px;
  list-style: none;
  font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
  display: inline-block;
  height: auto;
  margin-inline-end: 8px;
  padding-inline: 7px;
  white-space: nowrap;
  border-radius: 4px;
  opacity: 1;
  transition: all .2s;
  text-align: start;
  position: relative;
}
.Lowest{
  color: #B7BCCC;
  background: white;
  border-color: #B7BCCC;
  border: 1px solid #B7BCCC;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-size: 10px;
  line-height: 16px;
  list-style: none;
  font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
  display: inline-block;
  height: auto;
  margin-inline-end: 8px;
  padding-inline: 7px;
  white-space: nowrap;
  border-radius: 4px;
  opacity: 1;
  transition: all .2s;
  text-align: start;
  position: relative;
}

.css-dev-only-do-not-override-1adbn6x.ant-divider-horizontal.ant-divider-with-text {
  display: flex;
  align-items: center;
  margin: 5px 0;
  color: rgba(0, 0, 0, 0.88);
  font-weight: 500;
  font-size: 12px;
  white-space: nowrap;
  text-align: center;
  border-block-start: 0 rgba(5, 5, 5, 0.06);
}
 .comment-lists {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-top: 10px;
}
.comment {
  background-color: #f5f5f5;
  border-radius: 10px;
  font-size: .8rem;
  padding: 10px;

  width: 98%;
}
.comment-inner{
  padding: 0;
  display: flex;
}
.button-resize {
  font-size: 10px !important;
  height: 16px!important;
}

.btnTrigger:hover{
background-color:white !important
}

/* button delete project */
.css-dev-only-do-not-override-j2rubj.ant-btn-primary {
  color: #fff;
  background-color:  #252935 !important;
  box-shadow: none !important;
}
.css-dev-only-do-not-override-1adbn6x.ant-pagination .ant-pagination-item-active a {
  color: #252935 !important;
}
.css-dev-only-do-not-override-1adbn6x.ant-btn-primary {
  color: #fff;
  background-color: #252935 !important;
  box-shadow: none !important;
}
.css-dev-only-do-not-override-1adbn6x.ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
  color: #fff;
  background-color: #252935 !important;
}
.css-dev-only-do-not-override-1adbn6x.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
  color: white !important;
  border-color: #d9d9d9 !important;
}

.css-dev-only-do-not-override-p3zz9t.ant-input:hover {
  border-color: black!important;
}
.css-dev-only-do-not-override-p3zz9t.ant-input-affix-wrapper:hover {
  border-color: black!important;
}
.css-dev-only-do-not-override-1adbn6x.ant-input-affix-wrapper:hover {
  border-color: black!important;
}
.css-1adbn6x.ant-btn  {
  color: #fff;
  background-color: #252935 !important;
  box-shadow: none !important
}
.css-1adbn6x.ant-btn-primary {
  color: #fff;
  background-color: #252935 !important;
  box-shadow: none !important
}
.css-dev-only-do-not-override-1adbn6x.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
  color: black !important;
  border-color: #d9d9d9 !important;
}

